--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,8 +1,6 @@
 numpy==1.26.2
-pandas==1.3.3
-scikit-learn==0.24.2
-matplotlib==3.4.3
-seaborn==0.11.2
+opencv-python==4.10.0.84
+pandas==2.2.3
+Pillow==11.0.0
+pybaseball==2.2.7
 tensorflow==2.18.0
-keras==2.6.0
-requests==2.26.0
